2004-03-21  John Luke  <jluke@cfl.rr.com>

	* docs/WritingAddins.html: initial addin quick guide
	* configure.in: Gtk# 0.18 is actually required

2004-03-21	John BouAntoun  <jba-mono@optusnet.com.au>

	* src/AddIns/DisplayBindings/SourceEditor/Search/SearchReplaceInFilesManager.cs:
	fixed taskview to be presented before "search completed" dialog.
	
2004-03-20 Iain McCoy <iainmccoy@optusnet.com.au>
	* configure.in: forgot to undo a change that was part of one of the
	mistakes I made :)

2004-03-20 Iain McCoy <iainmccoy@optusnet.com.au>
	* src/Main/Base/Gui/CompletionDatabaseWizard/*: Remove WriteLine
	statements
	* src/Main/Base/Gui/CompletionDatabaseWizard/DownloadGenerator.cs: add
	downloading from a url
	* src/Libraries/MonoDevelop.Gui.Utils/Makefile.am:
	* src/Libraries/MonoDevelop.Gui.Utils/ReportingStream/*:
	* src/Libraries/MonoDevelop.Gui.Utils/DirectoryArchive/*: Added
	ReportingStream and DirectoryArchive utilities

2004-03-20  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdldock/gdl/Makefile.am:
	* gdldock/gdl/Gdl.metadata: 
	* gdldock/gdl/DockObject.custom: Customize Gdl.DockObject.Present
	to accept a null parameter.

2004-03-20  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdldock/gdl/Makefile.am: Make the generated source files depend
	on the custom files too.
	* gdldock/gdl/DockLayout.custom: Fix list elements leak.

2004-03-20  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdldock/gdl/Makefile.am: 
	* gdldock/gdl/Gdl.metadata: 
	* gdldock/gdl/DockLayout.custom: Provide a customized GetLayouts
	to return a string[] instead of a GLib.List.
	* src/Main/Base/Gui/IWorkbenchLayout.cs:
	* src/Main/Base/Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	Support for different sets of layouts depending on the workbench
	context.  Implement Layouts property.  Layouts are saved to the
	xml file with fully qualified names such as "Context.Layout
	name".  CurrentLayout hides the context prefix, so the value
	set/retrieved is just the layout name.